--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,8 +5,9 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "baseUrl": "./"
   },
   "include": [
     "src/**/*"
