--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^18.15.12"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "cors": "^2.8.5",
