--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ TYPEORM_CONNECTION=postgres
 TYPEORM_HOST=localhost
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=root
-TYPEORM_DATABASE=users
+TYPEORM_DATABASE=users_db
 TYPEORM_PORT=5432
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=true
