--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.12"
+    "@types/node": "^18.15.12",
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -30,11 +31,10 @@
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
-    "tsc": "^2.0.4",
     "typeorm": "^0.3.15",
     "typeorm-cli": "^1.0.7"
   }
