Started the developing of client, change docker-compose.yml file

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ TYPEORM_LOGGING=true
 TYPEORM_MIGRATIONS_DIR=src/migrations
 TYPEORM_MIGRATIONS_RUN=false
 TYPEORM_MIGRATIONS_TABLE_NAME=migrations
+CLIENT_PORT=3000
+SERVER_PORT=3001
