--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     container_name: server_app
     build: ./server
     ports:
-      - '3001:3001'
+      - ${SERVER_PORT}:${SERVER_PORT}
     environment:
       DB_HOST: database
       DB_USER: ${TYPEORM_USERNAME}
@@ -32,4 +32,15 @@ services:
       - type: bind
         source: ./server/src/migrations
         target: /src/migrations
+        read_only: false
+
+  client:
+    container_name: client_app
+    build: ./client
+    ports:
+      - ${CLIENT_PORT}:${CLIENT_PORT}
+    volumes:
+      - type: bind
+        source: ./client
+        target: /app
         read_only: false
