--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,7 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "pages": ["./pages/index.ts"]
+    }
   },
   "include": [
     "src"
