--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.12",
     "nodemon": "^2.0.22"
   },
@@ -31,6 +32,7 @@
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
